--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,29 @@
 {
     "name": "talesoft/tale-cache",
     "type": "library",
-    "keywords": ["cache", "caching", "psr-6"],
-    "description": "A small and basic PSR-6 compatible caching library",
+    "keywords": ["cache", "psr-6", "psr-16"],
+    "description": "A basic cache implementation with adapter support through PSR-6 pools",
     "license": "MIT",
-    "homepage": "http://docs.talesoft.io/tale-framework/tale-cache",
+    "homepage": "http://docs.talesoft.codes/php/tale/inflector",
     "authors": [
         {
-            "name": "Talesoft",
-            "homepage": "http://talesoft.io",
-            "email": "info@talesoft.io"
-        },
-        {
             "name": "Torben Koehn",
-            "email": "tk@talesoft.io"
+            "email": "torben@talesoft.codes"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=5.5.0",
-        "psr/cache": ">=1.0",
-        "talesoft/tale-config": "~0.2"
+        "php": ">=7.1.0",
+        "talesoft/tale-cache-core": "dev-master",
+        "psr/cache": "^1.0",
+        "psr/simple-cache": "^1.0"
+    },
+    "require-dev": {
+        "talesoft/tale-dev-tool": "dev-master"
     },
     "autoload": {
         "psr-4": {
-            "Tale\\": ""
+            "Tale\\": "src",
+            "Tale\\Test\\": "tests"
         }
-    },
-    "provides": {
-        "psr/cache-implementation": "~1.0"
     }
 }
